# hermes-ide

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN_PRINCIPLES.md  PLAN.md  README.md  RELEASE_NOTES.md  WKWEBVIEW_COMPOSITION_FIX_CONTEXT.txt  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  debug-appimage.yml  release.yml  sponsor-thank-you.yml
axon/: package-lock.json
axon/src/: App.tsx
axon/src-tauri/: Cargo.toml
docs/: PRD-menus-and-context-menus.md
docs/adr/: 001-agent-mode.md
docs/internal/: v1-agent-stabilization-plan.md  v1-claude-agent-from-scratch.md  v1-master-plan.md  v1-redesign-playbook.md  v1-tui-parity-plan.md
scripts/: bump-version.mjs  release-local.env.example  release-local.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.beta.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/benches/: analyzer.rs
src-tauri/bridge/: bridgeRuntimeHelpers.mjs  canUseToolHelpers.mjs  hermes-claude-bridge.mjs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: claude-builtins.json
src-tauri/src/: clipboard.rs  lib.rs  main.rs  platform.rs  plugins.rs
src-tauri/src/agent/: e2e_tests.rs  mod.rs  prewarm.rs
src-tauri/src/claude/: discovery.rs  mod.rs
src-tauri/src/claude_config/: mod.rs
src-tauri/src/composer/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/git/: journal.rs  mod.rs  watcher.rs  worktree.rs
src-tauri/src/inline_pty/: mod.rs
src-tauri/src/menu/: mod.rs
src-tauri/src/process/: mod.rs
src-tauri/src/project/: mod.rs
src-tauri/src/pty/: adapters.rs  analyzer.rs  commands.rs  mod.rs  models.rs  shell_integration.rs  spawn.rs
src-tauri/src/realm/: attunement.rs  cartography.rs  mod.rs
src-tauri/src/workspace/: mod.rs
src-tauri/test-fixtures/agent-stream/: text-response.ndjson  thinking.ndjson  tool-bash.ndjson
src-tauri/tests/: tauri_config.rs
src/__tests__/: agent-attach-drift-order.test.ts  api-hooks-bugs.test.ts  (+134 more)
(+345 files in other folders)
